Fix presets not parsing
Replaced Cordova's File with Capacitor's Filesystem

--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "@capacitor/android": "6.1.2",
     "@capacitor/app": "6.0.1",
     "@capacitor/core": "^6.1.2",
+    "@capacitor/filesystem": "^6.0.1",
     "@capacitor/haptics": "6.0.1",
     "@capacitor/keyboard": "6.0.2",
     "@capacitor/status-bar": "6.0.1",
-    "@ionic/angular": "^8.0.0",
+    "@ionic/angular": "^8.4.0",
+    "cordova-plugin-file": "^8.1.2",
     "cordova-plugin-nativeaudio": "^3.0.9",
     "File": "0.10.2",
     "ionicons": "^7.2.1",
